Fixed bolded headings not showing

--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,7 @@ h1 {
 table { 
   table-layout:fixed; width:500px;
 }
+
+tr {
+  vertical-align: top;
+}
